# b2upload

./: .gitignore  LICENSE  README.md  build.sh  version.sh  wrangler.toml
.github/workflows/: release.yml
src/: app.js  cloudflare_worker.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  storage.rs  uploader.rs
src-tauri/tmp/: terminal-loader.html
