[package]
name = "b2upload"
version = "1.0.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-clipboard-manager = "2"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
zeroize = { version = "1", features = ["derive"] }
percent-encoding = "2"

[profile.release]
opt-level = 2 
# Reduces parallel compilation bottlenecks
codegen-units = 16 
lto = "thin" 

[profile.release.package."*"]
opt-level = 2
